2014-12-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use new type-FOO procs.

	* postgres-col-defs.scm: From ‘(database postgres-types)’,
	don't import ‘dbcoltype-lookup’, ‘dbcoltype:objectifier’,
	‘dbcoltype:stringifier’; instead, import ‘type-objectifier’
	and ‘type-stringifier’.
	(objectifiers): Use ‘type-objectifier’.
	(stringifiers): Use ‘type-stringifier’.
	* postgres-meta.scm: From ‘(database postgres-types)’,
	don't import ‘dbcoltype-lookup’; instead, import ‘type-registered?’.
	(check-type/elaborate): Use ‘type-registered?’.
	* postgres-table.scm: From ‘(database postgres-types)’, don't
	import ‘dbcoltype-lookup’, ‘dbcoltype:objectifier’,
	dbcoltype:‘default’, ‘dbcoltype:stringifier’; instead, import
	‘type-registered?’, ‘type-stringifier’, ‘type-objectifier’,
	‘type-default’.
	(compile-outspec push!): Use ‘type-registered?’, ‘type-objectifier’.
	(pgtable-manager): Use ‘type-registered?’, ‘type-objectifier’.
	(pgtable-manager ->db-insert-string): Use ‘type-stringifier’,
	‘type-default’.

2014-12-19  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[omm] Add basic type-FOO procs.

	* postgres-types.scm (type-registered?): New proc, exported.
	(type-stringifier, type-default, type-objectifier): Likewise.

2014-12-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Say simply "converter" instead of "type converter".

	* postgres-meta.scm (check-type/elaborate): Update doc-comment.
	* postgres-types.scm (dbcoltypes, dbcoltype-lookup)
	(dbcoltype:stringifier, dbcoltype:default)
	(dbcoltype:objectifier): Likewise.

2014-11-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Elide single-use local var.

	* libpq.c (pg_client_encoding): ...here.

2014-11-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq] Fix bug: Remember to ‘free’ mem allocated in ‘copy_string’.

	Longstanding bug, since inception: Guile-PG 0.30.

	* libpq.c (drop_paramspecs): ...here.

2014-11-02  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[C int] Add abstraction: copy_string
